# feedback_improvent_pipeline

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  database.py  init_db.py  main.py  models.py  queue.py  schemas.py
app/evaluators/: __init__.py  base.py  coherence_evaluator.py  heuristic_evaluator.py  llm_judge.py  tool_evaluator.py
app/routers/: conversations.py  evaluations.py  feedback.py  queue.py
app/services/: calibration_service.py  evaluation_service.py
app/ui/: streamlit_app.py
docs/: README.md  api.md  architecture.md  render-deploy.md  self-healing.md  setup.md
tests/: conftest.py  test_api.py  test_evaluators.py  test_queue.py
